<resources>
    <string name="app_name">PartApp</string>
    <string name="groups_btn_pages">450 pages</string>
    <string name="groups_btn_pages_finish">500 pages</string>
    <string name="groups_et_search_hint">Enter group ID</string>
    <string name="groups_tv_search_hint1">Search for a group</string>
    <string name="groups_tv_search_hint2">Enter group ID to search for ask ID from group admin</string>
    <string name="groups_tv_username">Username</string>
    <string name="groups_tv_createNewGroup">Create new group</string>
    <string-array name="shapes" >
        <item>rectangle</item>
        <item>triangle</item>
        <item>circle</item>
    </string-array>
</resources>